tests/errors/string/const_index_out_of_bounds_errors.sim

        fn f() {
          s: [u8; 5];
          b: u8;
          entry:
            s = b"hello";
            b = copy s[5u64];
            return
        }
        