tests/errors/string/const_index_out_of_bounds_errors.err.expected
error: at 7:13: [TC-ArrayIndexOutOfBounds] In function 'f', block 'entry': Array index 5 out of bounds for [_; 5]
   |
 7 |             b = copy s[5u64];
   |             ^^^^^^^^^^^^^^^^
